Criando ordem e pagamento