@@ -1,29 +1,29 @@
 package com.deliverynow.order.adapters.gateway;
 
 
-import com.deliverynow.order.application.mapper.OrderMapper;
-import com.deliverynow.order.infrastructure.repository.OrderRepository;
+import com.deliverynow.order.application.mapper.OrderMapperV2;
 import com.deliverynow.order.domain.entity.Order;
 import com.deliverynow.order.domain.gateway.OrderGateway;
+import com.deliverynow.order.infrastructure.repository.OrderRepository;
+import io.quarkus.panache.common.Sort;
 import jakarta.enterprise.context.ApplicationScoped;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class OrderRepositoryGateway implements OrderGateway {
 
     OrderRepository orderRepository;
-    OrderMapper orderMapper;
+    OrderMapperV2 orderMapper;
 
-    public OrderRepositoryGateway(OrderRepository orderRepository, OrderMapper orderMapper) {
+    public OrderRepositoryGateway(OrderRepository orderRepository, OrderMapperV2 orderMapper) {
         this.orderRepository = orderRepository;
         this.orderMapper = orderMapper;
     }
 
     @Override
     public void insertOrder(Order order) {
-        var newOrder = orderMapper.orderToOrderEntity(order);
+        var newOrder = orderMapper.domainToEntity(order);
         orderRepository.persist(newOrder);
     }
 
@@ -31,6 +31,6 @@ public class OrderRepositoryGateway implements OrderGateway {
     public List<Order> listOrders() {
         var orderEntities = orderRepository.listAll();
         return orderEntities.stream()
-                .map(order -> orderMapper.orderEntityToOrder(order)).collect(Collectors.toList());
+                .map(order -> orderMapper.entityToDomain(order)).toList();
     }
 }
